--- a/examples/index.html
+++ b/examples/index.html
@@ -31,7 +31,6 @@
     <div class="purple box"></div>
     <div class="blue box"></div>
 
-    <div class="black box"></div>
     <div class="green box"></div>
     <div class="red box"></div>
     <div class="bronze box"></div>
@@ -39,5 +38,33 @@
     <div class="purple box"></div>
     <div class="blue box"></div>
     <div class="orange box"></div>
+    <div class="black box"></div>
+   
+    <div class="red box"></div>
+    <div class="bronze box"></div>
+    <p class="orangered box"></p>
+    <div class="purple box"></div>
+    <div class="blue box"></div>
+    <div class="orange box"></div>
+    <div class="black box"></div>
+    <div class="green box"></div>
+
+    <div class="bronze box"></div>
+    <p class="orangered box"></p>
+    <div class="purple box"></div>
+    <div class="blue box"></div>
+    <div class="orange box"></div>
+    <div class="black box"></div>
+    <div class="green box"></div>
+    <div class="red box"></div>
+
+    <p class="orangered box"></p>
+    <div class="purple box"></div>
+    <div class="blue box"></div>
+    <div class="orange box"></div>
+    <div class="black box"></div>
+    <div class="green box"></div>
+    <div class="red box"></div>
+    <div class="bronze box"></div>
   </body>
 </html>
